# clv-analytics

./: .env.example  .gitignore  DASHBOARD_README.md  QUICK_START.md  README.md  SCHEDULING_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
docker/pgadmin/: servers.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Dashboard.tsx  index.css
launchd/: cleanup_old_batches.sh  com.clvanalytics.odds.closing.plist  com.clvanalytics.odds.opening.plist  com.clvanalytics.scheduler.plist  install_dynamic_scheduler.sh
migrations/: env.py
migrations/versions/: 0fe52f00493f_initial_schema.py  1e27b7dea27a_add_prediction_market_arb_and_best_ev_.py  852e3163ab49_add_daily_clv_reports_table.py  8db8fc98d1bd_add_ev_opportunities_to_daily_reports.py  9b8158e72dbf_add_user_bets_table.py  ae018c662ca2_add_point_line_to_best_ev_picks.py  cb312520d248_add_prediction_market_paper_trading_.py  f1104e42283c_add_point_line_to_opportunity_.py  fb633588cc6d_add_profit_tracking_to_daily_reports.py  fc914c918263_add_betting_outcomes_and_performance_.py
scripts/: analyze_daily_clv.py  analyze_movement_patterns.py  auto_retrain.py  check_scheduler_health.py  collect_odds.py  fetch_game_scores.py  query_data.py  run_collection.sh  schedule_game_batches.py  start_dashboard.sh  test_clv.py  test_clv_db.py  test_clv_with_fake_data.py  test_collector.py  track_opportunity_performance.py  train_model.py  train_movement_model.py  update_report_profit_stats.py  visualize_movements.py
tests/: test_bet_sizing.py
(+36 files in other folders)
